# Trading_Bot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  kraken_client.py  models.py  openai_strategy.py  risk_manager.py  storage.py  trade_engine.py  ui_streamlit.py
