[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kraken-openai-trading-bot"
version = "0.1.0"
description = "Safety-first Kraken + OpenAI assisted trading bot"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "streamlit>=1.44.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.1",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
